--- a/application/app/src/main/res/layout/fragment_free_board.xml
+++ b/application/app/src/main/res/layout/fragment_free_board.xml
@@ -3,23 +3,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="org.sinabro.application.fragments.FreeBoardFragment">
 
 
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/recyclerView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_below="@+id/toolbar_container"
-            android:clipToPadding="false" />
 
         <RelativeLayout
-            android:id="@+id/toolbar_home"
+            android:id="@+id/toolbar_background"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="#FFC107">
@@ -33,7 +24,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
 
-
                     <TextView
                         android:id="@+id/tv_toolbar_title"
                         android:layout_width="wrap_content"
@@ -43,9 +33,18 @@
                         android:textSize="20sp" />
                 </RelativeLayout>
             </android.support.v7.widget.Toolbar>
-
-
         </RelativeLayout>
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:clipToPadding="false">
+
+
+        </android.support.v7.widget.RecyclerView>
+
+
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/freeboard_writeFAB"
             android:layout_width="wrap_content"
@@ -59,6 +58,5 @@
             app:fabSize="normal"
             app:layout_behavior="org.sinabro.application.ScrollingFABBehavior" />
 
-    </RelativeLayout>
 
 </LinearLayout>
