--- a/application/app/src/main/res/layout/fragment_mypage.xml
+++ b/application/app/src/main/res/layout/fragment_mypage.xml
@@ -1,13 +1,267 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="org.sinabro.application.fragments.MyPageFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="120dp"
+        android:background="@drawable/profile_background1">
+    </RelativeLayout>
+
+    <ImageView
+        android:id="@+id/tmpImg"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="70dp"
+        android:src="@drawable/profile_icon"/>
+
+    <LinearLayout
+        android:id="@+id/linear"
+        android:layout_below="@+id/tmpImg"
+        android:layout_centerHorizontal="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <TextView
+            android:layout_gravity="center_horizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="홍길동"
+            android:textSize="23dp"
+            android:textStyle="bold"/>
+
+        <TextView
+            android:layout_gravity="center_horizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="재학생"
+            android:textColor="@android:color/darker_gray"
+            android:textSize="17dp"
+            android:layout_marginVertical="3dp"/>
+
+        <Button
+            android:layout_gravity="center_horizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:background="@drawable/profile_kind_button"
+            android:text=" hongildong@naver.com"
+            android:textSize="15dp"
+            android:textColor="#fff"
+            android:paddingHorizontal="8dp"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_below="@+id/linear"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="마이페이지" />
+        android:orientation="vertical"
+        android:layout_marginTop="25dp">
 
-</FrameLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:orientation="vertical">
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="3dp"
+                android:layout_centerInParent="true"
+                android:background="@android:color/darker_gray"></View>
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="내가 올린 글"
+                        android:gravity="center"
+                        android:layout_marginTop="15dp"
+                        android:textSize="17dp"/>
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="6"
+                        android:gravity="center"
+                        android:layout_marginTop="5dp"
+                        android:textColor="@android:color/black"
+                        android:textStyle="bold"
+                        android:textSize="19dp"/>
+
+                </LinearLayout>
+
+                 <LinearLayout
+                     android:orientation="vertical"
+                     android:layout_width="0dp"
+                     android:layout_weight="1"
+                     android:layout_height="match_parent">
+
+                         <TextView
+                             android:layout_width="match_parent"
+                             android:layout_height="wrap_content"
+                             android:text="참여한 프로젝트"
+                             android:gravity="center"
+                             android:layout_marginTop="15dp"
+                             android:textSize="17dp"/>
+
+                         <TextView
+                             android:layout_width="match_parent"
+                             android:layout_height="wrap_content"
+                             android:text="3"
+                             android:gravity="center"
+                             android:layout_marginTop="3dp"
+                             android:textColor="@android:color/black"
+                             android:textStyle="bold"
+                             android:textSize="19dp"/>
+
+
+
+
+                 </LinearLayout>
+
+                <LinearLayout
+                 android:orientation="vertical"
+                 android:layout_width="0dp"
+                 android:layout_weight="1"
+                 android:layout_height="match_parent">
+
+                 <TextView
+                     android:layout_width="match_parent"
+                     android:layout_height="wrap_content"
+                     android:text="진행 중인 스터디"
+                     android:gravity="center"
+                     android:layout_marginTop="15dp"
+                     android:textSize="17dp"/>
+
+                 <TextView
+                     android:layout_width="match_parent"
+                     android:layout_height="wrap_content"
+                     android:text="1"
+                     android:gravity="center"
+                     android:layout_marginTop="5dp"
+                     android:textColor="@android:color/black"
+                     android:textStyle="bold"
+                     android:textSize="19dp"/>
+
+             </LinearLayout>
+
+         </LinearLayout>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="3"
+            android:background="@android:color/darker_gray"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="3dp"
+                android:orientation="vertical">
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:orientation="horizontal"
+                    android:layout_marginBottom="3dp"
+                    android:background="#fff">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:text="프로필 수정"
+                        android:gravity="center_vertical"
+                        android:textSize="20dp"
+                        android:layout_marginLeft="30dp"/>
+
+                    <ImageButton
+                        android:layout_centerVertical="true"
+                        android:layout_alignParentRight="true"
+                        android:layout_marginRight="30dp"
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
+                        android:background="@drawable/right_direction_button"></ImageButton>
+
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:orientation="horizontal"
+                    android:layout_marginBottom="3dp"
+                    android:background="#fff">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:text="비밀번호 변경"
+                        android:gravity="center_vertical"
+                        android:textSize="20dp"
+                        android:layout_marginLeft="30dp"/>
+
+                    <ImageButton
+                        android:layout_centerVertical="true"
+                        android:layout_alignParentRight="true"
+                        android:layout_marginRight="30dp"
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
+                        android:background="@drawable/right_direction_button"></ImageButton>
+
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:orientation="horizontal"
+                    android:layout_marginBottom="3dp"
+                    android:background="#fff">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:text="로그아웃"
+                        android:gravity="center_vertical"
+                        android:textSize="20dp"
+                        android:layout_marginLeft="30dp"/>
+
+                    <ImageButton
+                        android:layout_centerVertical="true"
+                        android:layout_alignParentRight="true"
+                        android:layout_marginRight="30dp"
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
+                        android:background="@drawable/right_direction_button"></ImageButton>
+
+                </RelativeLayout>
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+    </LinearLayout>
+
+</RelativeLayout>
