--- a/application/app/src/main/res/drawable-xxxhdpi/back_splash.xml
+++ b/application/app/src/main/res/drawable-xxxhdpi/back_splash.xml
@@ -3,6 +3,7 @@
     android:opacity="opaque">
     <item android:drawable="@color/cardview_light_background"/>
     <item android:gravity="center_horizontal"
-        android:top="120dp"
-        android:width="180dp" android:height="18dp" android:drawable="@drawable/damunity_logo" />
+        android:top="150dp"
+        android:width="200dp" android:height="200dp"
+        android:drawable="@drawable/damunity_logo" />
 </layer-list>
