--- a/application/app/src/main/res/layout/activity_login.xml
+++ b/application/app/src/main/res/layout/activity_login.xml
@@ -2,8 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
+    android:background="#FFF8E1"
     android:layout_height="match_parent"
-    android:background="@drawable/login"
     android:orientation="vertical">
 
     <RelativeLayout
@@ -15,30 +15,11 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:fitsSystemWindows="true"
-            android:scaleType="centerCrop"
+            android:scaleType="fitCenter"
+            android:src="@drawable/damunity_logo"
            />
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:gravity="center_horizontal"
-            android:orientation="vertical">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Daemunity"
-                android:textColor="#FFFFFF"
-                android:textSize="30dp" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Daedeok Software Miester HighSchool"
-                android:textColor="#FFFFFF"
-                android:textSize="15dp" />
-        </LinearLayout>
 
     </RelativeLayout>
 
@@ -64,8 +45,8 @@
                 android:drawableStart="@drawable/ic_person_black_24dp"
                 android:hint="User name"
                 android:padding="10dp"
-                android:textColor="#FFF"
-                android:textColorHint="#FFF"
+                android:textColor="#000"
+                android:textColorHint="#795548"
                 android:theme="@style/MyEditText" />
 
 
@@ -82,8 +63,8 @@
                 android:drawableStart="@drawable/ic_lock_black_24dp"
                 android:hint="Password"
                 android:padding="10dp"
-                android:textColor="#FFFF"
-                android:textColorHint="#FFF"
+                android:textColor="#000"
+                android:textColorHint="#795548"
                 android:theme="@style/MyEditText" />
 
             <CheckBox
@@ -95,9 +76,8 @@
                 android:layout_alignLeft="@+id/password"
                 android:layout_centerHorizontal="true"
                 android:text="Remember me"
-
-                android:textColor="@android:color/white"
-                android:buttonTint="#FFF" />
+                android:textColor="@android:color/black"
+                android:buttonTint="#795548" />
 
 
             <Button
@@ -106,7 +86,7 @@
                 android:layout_below="@+id/cb_login_remember"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="20dp"
                 android:background="@drawable/login_button"
                 android:text="LOGIN"
                 android:textColor="#FFF"
@@ -141,7 +121,7 @@
             android:layout_centerHorizontal="true"
             android:layout_marginTop="20dp"
             android:textSize="14sp"
-            android:textColor="#FFDEDE"
+            android:textColor="#795548"
             android:layout_alignParentTop="true"/>
     </RelativeLayout>
 
