--- a/application/app/src/main/res/values/styles.xml
+++ b/application/app/src/main/res/values/styles.xml
@@ -11,8 +11,8 @@
 
     <!--Input field style-->
     <style name="MyEditText" parent="Theme.AppCompat.Light">
-        <item name="colorControlNormal">#DDD</item>
-        <item name="colorControlActivated">@color/colorPrimary</item>
+        <item name="colorControlNormal">#BCAAA4</item>
+        <item name="colorControlActivated">#795548</item>
     </style>
 
     <style name="DialogWindowTitle">
