--- a/application/app/src/main/res/layout/view_bottom_sheet.xml
+++ b/application/app/src/main/res/layout/view_bottom_sheet.xml
@@ -1,11 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
+<android.support.constraint.ConstraintLayout app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
     android:id="@+id/fragment_history_menu_bottom"
     android:layout_width="match_parent"
-    android:layout_height="200dp"
-    android:orientation="vertical"
-    android:background="#000"
+    android:layout_height="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-</LinearLayout>
+    <RelativeLayout
+        android:id="@+id/rl_bottom_sheet"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:behavior_hideable="true"
+        android:behavior_peekHeight="200dp">
+        <!-- 생략 -->
+    </RelativeLayout>
+
+</android.support.constraint.ConstraintLayout>
