--- a/application/app/src/main/res/layout/view_bottom_sheet.xml
+++ b/application/app/src/main/res/layout/view_bottom_sheet.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
-    android:id="@+id/fragment_history_menu_bottom"
+<android.support.design.widget.CoordinatorLayout android:id="@+id/fragment_history_menu_bottom"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="200dp"
+    android:fitsSystemWindows="true"
+    xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
@@ -10,9 +11,9 @@
         android:id="@+id/rl_bottom_sheet"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:behavior_hideable="true"
-        android:behavior_peekHeight="200dp">
+        app:behavior_hideable="true"
+        app:behavior_peekHeight="200dp">
         <!-- 생략 -->
     </RelativeLayout>
 
-</android.support.constraint.ConstraintLayout>
+</android.support.design.widget.CoordinatorLayout>
