--- a/application/app/src/main/res/layout/fragment_my_page.xml
+++ b/application/app/src/main/res/layout/fragment_my_page.xml
@@ -46,14 +46,16 @@
                         android:layout_alignLeft="@+id/aaa"
                         android:layout_alignParentRight="true"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
+                        android:layout_height="wrap_content"
+                        android:id="@+id/textView" />
 
                     <ImageButton
+                        android:id="@+id/imageButton"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerVertical="true"
-                        android:layout_toRightOf="@+id/aaa"
-                        android:src="@drawable/ic_add_circle_white_24dp"/>
+                        android:layout_alignParentEnd="true"
+                        android:src="@drawable/ic_add_circle_white_24dp" />
 
                 </RelativeLayout>
 
