--- a/application/app/src/main/res/layout/fragment_my_page.xml
+++ b/application/app/src/main/res/layout/fragment_my_page.xml
@@ -54,7 +54,9 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerVertical="true"
+                        android:layout_marginRight="20dp"
                         android:layout_alignParentEnd="true"
+                        android:background="@drawable/button_event"
                         android:src="@drawable/ic_add_circle_white_24dp" />
 
                 </RelativeLayout>
@@ -72,6 +74,22 @@
 
         </LinearLayout>
 
+
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/profile"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentStart="true"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="#000"
+            android:layout_toRightOf="@id/profile"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="80dp"/>
+
     </RelativeLayout>
 
 
@@ -80,8 +98,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1">
-
+        android:layout_weight="1">d
     </RelativeLayout>
 
 
